<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <VideoView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="6dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingVertical="6dp"
        android:weightSum="3">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="2.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_username"
                    android:textColor="@color/white"
                    android:textSize="17sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/default_time"
                    android:textColor="@color/textColorItemVideoTime"
                    android:textSize="17sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:text="@string/default_username"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/imageDefaultDesc"
                    android:src="@drawable/ic_audio" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_default_audio"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:src="@drawable/avatardefault" />


            <ImageView
                android:layout_width="41dp"
                android:layout_height="41dp"
                android:layout_marginVertical="8dp"
                android:contentDescription="@string/imageDefaultDesc"
                android:src="@drawable/heart"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/default_likes"
                android:textColor="@color/white" />


            <ImageView
                android:layout_width="41dp"
                android:layout_height="41dp"
                android:layout_marginVertical="8dp"
                android:contentDescription="@string/imageDefaultDesc"
                android:src="@drawable/comment"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/default_comments"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="41dp"
                android:layout_marginVertical="8dp"
                android:contentDescription="@string/imageDefaultDesc"
                android:src="@drawable/share"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/share"
                android:textColor="@color/white" />


        </LinearLayout>


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>