<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.edit.EditProfileActivity"
    tools:ignore="UseCompoundDrawables">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/avatardefault" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="@color/colorEditProfileTitleItems"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/colorEditProfileItems"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/imageDefaultDesc"
                    android:src="@drawable/ic_arrow_l" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginVertical="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/username"
                android:textColor="@color/colorEditProfileTitleItems"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_username"
                    android:textColor="@color/colorEditProfileItems"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/imageDefaultDesc"
                    android:src="@drawable/ic_arrow_l" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical|end"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_link"
                android:textColor="@color/colorEditProfileItems"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/imageDefaultDesc"
                android:src="@drawable/ic_copy" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginVertical="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bio"
                android:textColor="@color/colorEditProfileTitleItems"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_bio_profile"
                    android:textColor="@color/colorEditProfileItems"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/imageDefaultDesc"
                    android:src="@drawable/ic_arrow_l" />


            </LinearLayout>


        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lineDividerEditProfile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginVertical="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/instagram"
                android:textColor="@color/colorEditProfileTitleItems"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1.5"
                android:gravity="center_vertical|end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_ig_profile"
                    android:textColor="@color/colorEditProfileItems"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/imageDefaultDesc"
                    android:src="@drawable/ic_arrow_l" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginVertical="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/youtube"
                android:textColor="@color/colorEditProfileTitleItems"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1.5"
                android:gravity="center_vertical|end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_yt_profile"
                    android:textColor="@color/colorEditProfileItems"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/imageDefaultDesc"
                    android:src="@drawable/ic_arrow_l" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</LinearLayout>